--- a/elearning-html-template/index.html
+++ b/elearning-html-template/index.html
@@ -87,7 +87,7 @@
                         <div class="col-sm-10 col-lg-8">
                             <!-- <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Break your leg?</h5> -->
                             <h1 class="display-4 text-white animated slideInDown">Owen Vocational Services, Inc.</h1>
-                            <p class="fs-3 text-white mb-4 pb-2">Recognized experts in rehabilitation and life care planning</p>
+                            <p class="fs-3 text-white mb-4 pb-2 small-header">Recognized experts in rehabilitation and life care planning</p>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a> -->
                         </div>
                     </div>
