--- a/elearning-html-template/cvs.html
+++ b/elearning-html-template/cvs.html
@@ -80,7 +80,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">CVs</h1>
+                    <h1 class="display-3 text-white animated slideInDown">Curricula Vitae</h1>
                     <!-- <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
