--- a/elearning-html-template/index.html
+++ b/elearning-html-template/index.html
@@ -218,10 +218,7 @@
                                     general psychology, employment interventions, and human growth and development.</p>
                             </div>
                             <div class="col-sm-10">
-                                <p class="mb-3"><i class="fa fa-arrow-right text-primary me-2"></i>One of six life care
-                                    planning professionals who has served as editor-in-chief of the <em>Journal of Life
-                                        Care
-                                        Planning</em> since 2000.</p>
+                                <p class="mb-3"><i class="fa fa-arrow-right text-primary me-2"></i>One of six life care planning professionals since 2000 to serve as editor-in-chief of the <em>Journal of Life Care Planning</em> 
                             </div>
                             <div class="col-sm-10">
                                 <p class="mb-3"><i class="fa fa-arrow-right text-primary me-2"></i>Research published in
