--- a/elearning-html-template/services.html
+++ b/elearning-html-template/services.html
@@ -182,7 +182,7 @@
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Earning Capacity Evaluations</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Transferrable Skills Analysis</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Transferable Skills Analysis</p>
                             </div>
                             <div class="col-sm-6">
                                 <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Family Law Evaluations</p>
